# Kalman

./: .gitignore  _commit_msg.txt
Kalman/: CLAUDE.md  PRD.md  README.md  TODO.md  pyproject.toml
Kalman/.tasks/: 000-split-kalman-package-server.md  001-resolve-v1-estimation-decisions.md  002-design-experiment-data-model.md  003-offline-dataset-ingestion-preprocessing.md  004-arx-prediction-adapter.md  005-kalman-estimation-cycle.md  006-experiment-configuration-persistence.md  007-store-run-outputs-pipeline-logs.md  008-evaluation-metrics-report-export.md  009-raw-predicted-filtered-dashboard.md  010-live-sensor-ingestion-path.md  011-missing-noisy-data-robustness-tests.md  012-v1-methodology-demo-workflow.md  013-synthesize-ampc-state-cost-safety-constraints.md
Kalman/backend/: .env.example  conftest.py  manage.py  requirements-dev.txt  requirements.txt
Kalman/dashboard/: package-lock.json  package.json  vite.config.ts
Kalman/greenhouse_kalman.egg-info/: PKG-INFO  SOURCES.txt
Kalman/kalman/: __init__.py
Kalman/tests/: conftest.py  test_ingestion.py  test_kalman.py  test_pipeline_robustness.py  test_prediction.py
MPC/: CHANGELOG.md  CLAUDE.md  PRD.md  README.md  TODO.md  pyproject.toml
MPC/.tasks/: 000-initial-project-setup.md  001-design-mpc-package-architecture.md  002-arx-plant-adapter-state-history.md  003-v2-grid-shooting-solver.md  004-v2-simulation-cli-baseline-report.md  005-v2-test-suite.md  006-v3-bias-adaptation-layer.md  007-v3-http-actuator-pilot.md  008-demo-workflow-validation-gates.md  009-normalize-mpc-objective-cost.md  TASK_TEMPLATE.md  (+3 more)
(+287 files in other folders)
