[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-kalman"
version = "0.1.0"
description = "Pure Adaptive Kalman algorithm package for greenhouse sensor estimation."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kalman*"]
