[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-mpc"
version = "0.1.0"
description = "Standalone MPC/AMPC controller for the smart greenhouse demo"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["mpc", "mpc.plant", "mpc.solver", "mpc.simulation"]
